modify the Gradle build for Java 11
minor reorganization of the source code